feat: remove optimize from webapps-backup