@@ -7,53 +7,13 @@
  */
 package io.camunda.webapps.schema.descriptors.backup;
 
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public record SnapshotIndexCollection(List<String> requiredIndices, List<String> skippableIndices) {
-
-  public boolean isEmpty() {
-    return requiredIndices.isEmpty() && skippableIndices.isEmpty();
-  }
-
-  public static <A extends BackupPriority> SnapshotIndexCollection of(
-      final Collection<A> backupPriorities) {
-    final var required = new ArrayList<String>(backupPriorities.size());
-    final var skippable = new ArrayList<String>();
-    for (final var priority : backupPriorities) {
-      if (priority.required()) {
-        required.add(priority.getFullQualifiedName());
-      } else {
-        skippable.add(priority.getFullQualifiedName());
-      }
-    }
+public record SnapshotIndexCollection(List<String> indices) {
+  public SnapshotIndexCollection addIndices(final Collection<String> newIndices) {
     return new SnapshotIndexCollection(
-        Collections.unmodifiableList(required), Collections.unmodifiableList(skippable));
-  }
-
-  public SnapshotIndexCollection addSkippableIndices(final Collection<String> newIndices) {
-    if (newIndices.isEmpty()) {
-      return this;
-    }
-    return new SnapshotIndexCollection(
-        requiredIndices, Stream.concat(skippableIndices.stream(), newIndices.stream()).toList());
-  }
-
-  public SnapshotIndexCollection removeSkippableIndices(final Collection<String> indicesToRemove) {
-    if (indicesToRemove.isEmpty()) {
-      return this;
-    }
-    return new SnapshotIndexCollection(
-        requiredIndices,
-        skippableIndices.stream().filter(idx -> !indicesToRemove.contains(idx)).toList());
-  }
-
-  public List<String> allIndices() {
-    return Stream.concat(requiredIndices.stream(), skippableIndices.stream())
-        .collect(Collectors.toList());
+        Stream.concat(indices.stream(), newIndices.stream()).toList());
   }
 }
